Fix display messages